# cis-375-project

./: .gitignore  CMakeLists.txt  README.md  products.js
db/: users.sql
docs/: README.md  auth.js  cart.html  index-handler.js  index.html  login-handler.js  login.html  product-page.js  product.html  products.html  signup-handler.js  signup.html  styles.css
frontend/: auth.js  cart-handler.js  cart.html  cart.js  index.html  login.html  product-detail.js  product-page.js  product.html  products-api.js  products-list.js  products.html  products.js  signup.html  styles.css
python-server/: app.py
server/: .dockerignore  CMakeLists.txt  Dockerfile  Dockerfile.dev  config.json  docker-compose.yml
server/archive/vault-dev/: app-policy.hcl  docker-compose.yml  reader-policy.hcl  writer-policy.hcl
server/archive/vault-dev/config/: vault-config.hcl
server/infra/postgres/: init.sql
server/infra/vault/config/: app-policy.hcl  setup.sh  vault-config.hcl
server/ml-service/: Dockerfile  app.py  requirements.txt
server/src/: main.cpp
server/src/controllers/: ApiController.cpp  ApiController.h  CartController.cpp  CartController.h  ImageController.cpp  ImageController.h  ProductController.cpp  ProductController.h
server/src/filters/: CorsFilter.h  JwtFilter.h
server/src/services/: MlService.h  QdrantService.h  VaultService.h
server/src/utils/: ApiHelpers.h  AppRole.h  Cryptography.h  IpHelper.h  JWT.h  JsonParser.h  Math.h  Validator.h
server/vault-dev/: docker-compose.yml
server/vault-dev/config/: app-policy.hcl  setup.sh
src/: main.cpp
src/controllers/: UserController.cc  UserController.h
src/utils/: JsonParser.h  Validator.h
